fixed redundant scrollbars on modal

--- a/f1-app/src/App.css
+++ b/f1-app/src/App.css
@@ -405,8 +405,8 @@ dialog {
   border-radius: 30px;
   padding: 30px;
   width: 60%;
-  max-height: 80vh;
-  overflow-y: auto;
+  max-height: 90vh;
+  overflow: hidden;
   box-shadow: 0 36px 36px rgba(0, 0, 0, 0.5), 0 50px 50px rgba(0, 0, 0, 0.19);
   color: white;
   z-index: 10000;
@@ -443,12 +443,17 @@ dialog {
   color: white;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-height: 400px;
+  flex: 1 1 auto; /* allow to grow */
   overflow-y: auto;
+  max-height: 50vh; /* control scrollable area height */
   border-top: 1px solid #555;
   border-bottom: 1px solid #555;
-  z-index: 2000;
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Chrome, Edge, Safari */
+.results-table::-webkit-scrollbar {
+  display: none;
 }
 
 .result-row {
